Implement the responsiveness.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ var reRenderTransitionDuration = 1000;
 var dataset = [
   {billid: "HB 4643", agree: 67, disagree: 54, index: 0},
   {billid: "HB 6066", agree: 87, disagree: 44, index: 1},
-  {billid: "HB 5851", agree: 160, disagree: 34, index: 3},
+  {billid: "HB 5851", agree: 164, disagree: 34, index: 3},
   {billid: "HB 5400", agree: 58, disagree: 18, index: 2}
 ];
 
@@ -66,25 +66,26 @@ var series = d3.stack()
     .offset(d3.stackOffsetDiverging)
     (dataset);
 
-
-// Scales
+//
+// SVG container
 var svg = d3.select("svg"),
     margin = {top: m_top, right: m_right, bottom: m_bottom, left: m_left};
 
+//
+// Scales
+var yScale = d3.scaleBand()
+               .domain(billIds)
+               .rangeRound([m_top, height - m_bottom])
+               .padding(0.4);
 
-var y = d3.scaleBand()
-    .domain(billIds)
-    .rangeRound([m_top, height - m_bottom])
-    .padding(0.4);
+var xScale = d3.scaleLinear()
+               .domain([d3.min(series, stackMin), d3.max(series, stackMax)])
+               .rangeRound([m_left, width - m_right]);
 
-var x = d3.scaleLinear()
-    .domain([d3.min(series, stackMin), d3.max(series, stackMax)])
-    .rangeRound([m_left, width - m_right]);
-
-var z = d3.scaleOrdinal(d3.schemeCategory10);
-//var z = d3.scaleOrdinal()
-//          .domain(itemNames)
-//          .range(["#d62728", "#2ca02c", "#9467bd"]);
+var zScale = d3.scaleOrdinal(d3.schemeCategory10);
+//var zScale = d3.scaleOrdinal()
+//               .domain(itemNames)
+//               .range(["#d62728", "#2ca02c", "#9467bd"]);
 
 
 //
@@ -96,15 +97,15 @@ function renderGraph() {
      .data(series)
      .enter().append("g")
        .attr("class", "layer")
-       .attr("fill", function(d) { return z(d.key); })
+       .attr("fill", function(d) { return zScale(d.key); })
      .selectAll("rect")
      .data(function(d) { return d; })
      .enter().append("rect")
        .attr("class", "bar")
-       .attr("height", y.bandwidth)
-       .attr("x", function(d) { return x(d[0]); })
-       .attr("width", function(d) { return x(d[1]) - x(d[0]); })
-       .attr("y", function(d) { return y(d.data.billid); })
+       .attr("height", yScale.bandwidth)
+       .attr("x", function(d) { return xScale(d[0]); })
+       .attr("width", function(d) { return xScale(d[1]) - xScale(d[0]); })
+       .attr("y", function(d) { return yScale(d.data.billid); })
        .on("mouseover", function(d){tooltip.text(d[1]-d[0]); return tooltip.style("visibility", "visible");})
        .on("mousemove", function(){return tooltip.style("top", (event.pageY-10)+"px").style("left",(event.pageX+10)+"px");})
        .on("mouseout", function(){return tooltip.style("visibility", "hidden");});
@@ -116,14 +117,14 @@ function renderXaxis() {
   svg.append("g")
       .attr("class", "x--axis")
       .attr("transform", "translate(0," + m_top + ")")
-      .call(d3.axisTop(x));
+      .call(d3.axisTop(xScale));
 }
 
 function renderYaxis() {
   svg.append("g")
       .attr("class", "y--axis")
       .attr("transform", "translate(" + (m_left - 10) + ",0)")
-      .call(d3.axisLeft(y));
+      .call(d3.axisLeft(yScale));
 }
 
 renderGraph();
@@ -147,13 +148,12 @@ function orderByChanged() {
   else if (this.value === "orderbydisagree") orderByDisagree();
 }
 
-
 function reRenderGraph() {
   svg.selectAll("g.layer")
     .data(series)
       .attr("fill", function(d) {
         console.log("0: d:" + JSON.stringify(d));
-        return z(d.key);
+        return zScale(d.key);
       })
     .selectAll("rect.bar")
     .data(function(d) {
@@ -163,15 +163,15 @@ function reRenderGraph() {
       .transition()
       .ease(d3.easeExp)
       .duration(axisTransitionDuration)
-      .attr("height", y.bandwidth)
+      .attr("height", yScale.bandwidth)
       .attr("y", function(d) {
         console.log("2: d:" + JSON.stringify(d));
         console.log("2: d.data:" + JSON.stringify(d.data));
         console.log("2: d.data.billid:" + JSON.stringify(d.data.billid));
-        return y(d.data.billid);
+        return yScale(d.data.billid);
       })
-      .attr("x", function(d) { return x(d[0]); })
-      .attr("width", function(d) { return x(d[1]) - x(d[0]); });
+      .attr("x", function(d) { return xScale(d[0]); })
+      .attr("width", function(d) { return xScale(d[1]) - xScale(d[0]); });
 }
 
 function orderByIndex() {
@@ -184,7 +184,7 @@ function orderByIndex() {
 
   // Series Update
   series = d3.stack()
-    .keys(["agree", "disagree"])
+    .keys(itemNames) //.keys(["agree", "disagree"])
     .offset(d3.stackOffsetDiverging)
     (dataset);
 
@@ -192,14 +192,14 @@ function orderByIndex() {
   var _billIds = dataset.map( function(d) {
         return d.billid;
   });
-  y.domain(_billIds);
+  yScale.domain(_billIds);
 
   // Y Axis Update
   d3.select(".y--axis")
     .transition()
     .ease(d3.easeExp)
     .duration(reRenderTransitionDuration)
-    .call(d3.axisLeft(y));
+    .call(d3.axisLeft(yScale));
 
   // Re-render Graph
   reRenderGraph();
@@ -215,7 +215,7 @@ function orderByAgree() {
 
   // Series Update
   series = d3.stack()
-    .keys(["agree", "disagree"])
+    .keys(itemNames) //.keys(["agree", "disagree"])
     .offset(d3.stackOffsetDiverging)
     (dataset);
 
@@ -223,14 +223,14 @@ function orderByAgree() {
   var _billIds = dataset.map( function(d) {
         return d.billid;
   });
-  y.domain(_billIds);
+  yScale.domain(_billIds);
 
   // Y Axis Update
   d3.select(".y--axis")
     .transition()
     .ease(d3.easeExp)
     .duration(reRenderTransitionDuration)
-    .call(d3.axisLeft(y));
+    .call(d3.axisLeft(yScale));
 
   // Re-render Graph
   reRenderGraph();
@@ -247,7 +247,7 @@ function orderByDisagree() {
 
   // Series Update
   series = d3.stack()
-    .keys(["agree", "disagree"])
+    .keys(itemNames) //.keys(["agree", "disagree"])
     .offset(d3.stackOffsetDiverging)
     (dataset);
 
@@ -255,14 +255,14 @@ function orderByDisagree() {
   var _billIds = dataset.map( function(d) {
         return d.billid;
   });
-  y.domain(_billIds);
+  yScale.domain(_billIds);
 
   // Y Axis Update
   d3.select(".y--axis")
     .transition()
     .ease(d3.easeExp)
     .duration(reRenderTransitionDuration)
-    .call(d3.axisLeft(y));
+    .call(d3.axisLeft(yScale));
 
   // Re-render Graph
   reRenderGraph();
@@ -281,7 +281,7 @@ var legend = svg.selectAll(".legend")
       .attr("x", width + 18)
       .attr("width", 18)
       .attr("height", 18)
-      .attr("fill", function(d, i){  console.log(JSON.stringify(d.key)); return z(d.key)});
+      .attr("fill", function(d, i){  console.log(JSON.stringify(d.key)); return zScale(d.key)});
 
   legend.append("text")
       .attr("x", width + 44)
